Bringing the site to life.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,44 @@
 layout: default
 ---
 
-<h1>Owl</h1>
+<div class="row blue pad box">
+	<div class="span7">
+		<h2 class="white shadow-text valign">A View Library Utilizing Mustache to Render Templates</h2>
 
-<p>Cool information about the Owl library goes here</p>
+		<div><a href="downloads/Owl-1.2.2.zip" class="button large">Download</a></div>
+
+		<h4 class="white shadow-text">and for the composer crowd</h4>
+
+``` json
+"require":{
+	"davewid/owl": "1.2.*"
+}
+```
+	</div>
+	<div class="span2">&nbsp;</div>
+	<div class="span3">
+		<img src="assets/owl.png" alt="Owl" class="fit" />
+	</div>
+</div>
+
+<div class="row pad box">
+	<div class="span4">
+		<h3 class="valign">Mustache Renderer</h3>
+		<p>Owl ships with a Mustache rendering engine.
+		An Engine interface is also included for greater flexibility.</p>
+	</div>
+	<div class="span4">
+		<h3 class="valign">Open Source</h3>
+		<p>Owl is licensed under the fairly open
+			<a href="http://www.opensource.org/licenses/mit-license.php">MIT</a> license.
+			Use the	library as you wish!</p>
+	</div>
+	<div class="span4">
+		<h3 class="valign">Standards Compliant</h3>
+		<p>Owl is in compliance with
+			<a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-0.md">PSR-0</a>
+			and
+			<a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>
+		</p>
+	</div>
+</div>
