Updating the composer include section

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@ layout: default
 
 		<h4 class="white shadow-text">and for the composer crowd</h4>
 
-``` json
-"require":{
+<div class="code"><pre>"require":{
 	"davewid/owl": "1.2.*"
-}
-```
+}<pre></div>
+
 	</div>
 	<div class="span2">&nbsp;</div>
 	<div class="span3">
