Fixing the downloads page

--- a/download.html
+++ b/download.html
@@ -6,13 +6,13 @@ layout: default
 
 <ul>
 	<li>
-		1.2.2 <strong>Current</strong> -
+		<strong>Current</strong> 1.2.2 -
 		<a href="downloads/Owl-1.2.2.zip">Download</a> |
-		<a href="api/current">Documentation</a>
+		<a href="api/current/index.html">Documentation</a>
 	</li>
 	<li>
 		1.1.0 -
 		<a href="downloads/Owl-1.1.0.zip">Download</a> |
-		<a href="api/1.1.0">Documentation</a>
+		<a href="api/1.1.0/index.html">Documentation</a>
 	</li>
 </ul>
