Small updates to the download page

--- a/download.html
+++ b/download.html
@@ -2,17 +2,19 @@
 layout: default
 ---
 
-<h1>Download</h1>
+<div class="pad">
+	<h1>Download</h1>
 
-<ul>
-	<li>
-		<strong>Current</strong> 1.2.2 -
-		<a href="downloads/Owl-1.2.2.zip">Download</a> |
-		<a href="api/current/index.html">Documentation</a>
-	</li>
-	<li>
-		1.1.0 -
-		<a href="downloads/Owl-1.1.0.zip">Download</a> |
-		<a href="api/1.1.0/index.html">Documentation</a>
-	</li>
-</ul>
+	<ul class="air-out">
+		<li>
+			<strong>Current</strong> 1.2.2 -
+			<a href="downloads/Owl-1.2.2.zip">Download</a> |
+			<a href="api/current/index.html">Documentation</a>
+		</li>
+		<li>
+			1.1.0 -
+			<a href="downloads/Owl-1.1.0.zip">Download</a> |
+			<a href="api/1.1.0/index.html">Documentation</a>
+		</li>
+	</ul>
+</div>
