--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div class="row blue pad box">
-	<div class="span7">
-		<h2 class="white shadow-text valign">A View Library Utilizing Mustache to Render Templates</h2>
+	<div class="span8">
+		<h2 class="white shadow-text valign">A View Library Powered by Mustache</h2>
 
 		<div><a href="downloads/Owl-1.2.2.zip" class="button large">Download</a></div>
 
@@ -15,8 +15,7 @@ layout: default
 }<pre></div>
 
 	</div>
-	<div class="span2">&nbsp;</div>
-	<div class="span3">
+	<div class="span4">
 		<img src="assets/owl.png" alt="Owl" class="fit" />
 	</div>
 </div>
