--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 
 		<h4 class="white shadow-text">and for the composer crowd</h4>
 
-<div class="code"><pre>"require":{
+<div class="code"><pre class="unpad">"require":{
 	"davewid/owl": "1.2.*"
 }<pre></div>
 
